// *****************************************************************************
//
// This file is part of a MASA library or program.
// Refer to the included end-user license agreement for restrictions.
//
// Copyright (c) 2009 MASA Group
//
// *****************************************************************************

#ifndef __Protocol_Includes_h_
#define __Protocol_Includes_h_

#pragma warning( push, 0 )
#include "proto/test.pb.h"
#pragma warning( pop )

#endif __Protocol_Includes_h_
