// *****************************************************************************
//
// This file is part of a MASA library or program.
// Refer to the included end-user license agreement for restrictions.
//
// Copyright (c) 2010 MASA Group
//
// *****************************************************************************

#pragma warning( push )
#pragma warning( disable : 4244 4125 4127 4512 )

#include "generated/Common.pb.cc"
#include "generated/ClientToSim.pb.cc"
#include "generated/SimToClient.pb.cc"
#include "generated/ClientToAar.pb.cc"
#include "generated/AarToClient.pb.cc"
#include "generated/AuthenticationToClient.pb.cc"
#include "generated/DispatcherToClient.pb.cc"
#include "generated/ReplayToClient.pb.cc"
#include "generated/PluginToClient.pb.cc"
#include "generated/ClientToAuthentication.pb.cc"
#include "generated/ClientToReplay.pb.cc"
#include "generated/DispatcherToSim.pb.cc"
#include "generated/ClientToMessenger.pb.cc"

#pragma warning( pop )
